policies/httproute-enforce-allowed-hostnames/tests/overlays/test02/generated/admissionregistration.k8s.io_v1beta1_validatingadmissionpolicybinding_vaplibtest-httproute-hostnames-test02.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vaplibtest-httproute-hostnames-test02
  namespace: vaplibtest-httproutehostname-test02
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: vaplibtest-httproutehostname-test02
    objectSelector: {}
  paramRef:
    name: vaplibtest-param-test02
    namespace: vaplibtest-httproutehostname-test02
    parameterNotFoundAction: Deny
  policyName: vaplib-httproute-enforce-allowed-hostnames
  validationActions:
  - Deny
