policies/httproute-enforce-allowed-hostnames/tests/overlays/test02/generated/gateway.networking.k8s.io_v1beta1_httproute_vaplibtest-httproute-example-test02.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vaplibtest-httproute-example-test02
  namespace: vaplibtest-httproutehostname-test02
spec:
  hostnames:
  - notallowed.example.com
  parentRefs:
  - name: test
