policies/httproute-enforce-allowed-hostnames/tests/overlays/test02/generated/vap-library.io_v1beta1_vaplibhttproutehostnameparam_vaplibtest-param-test02.yaml
apiVersion: vap-library.io/v1beta1
kind: VAPLIBHTTPRouteHostnameParam
metadata:
  name: vaplibtest-param-test02
  namespace: vaplibtest-httproutehostname-test02
spec:
  allowedHostnames:
  - test.example.com
  - test2.example.com
